
   !	uri now includes data: in scheme-to-port table.

   !	Added more HTTP_ API status codes.

   !    Fixed isReservedIPv6() handling of IS_IP_V6_RESERVED, introduced
        in 1.75.17, as being part of IS_IP_RESTRICTED; broke pdq pruning
        code. Restored IS_IP_V6_COMPATIBLE.

   !	Fixed pdq handling of MX/CNAME lookup per RFC 5321 section 5.1.

--1.75.18--

   !	Finish modifications to MCC broadcast-only protocol to support
	update in smtpf. Remove need for two listener threads (multicast
	and unicast) since it possible for one socket to handle both.

   !	Modify socket2 and socket3 APIs to support IPv6 multicasting
	used by multicast cache API. Note Linux and FreeBSD support
	hybrid IP stack allows one sokcet to handle both IPv6 and IPv4. 

--1.75.17--

   *    Upgraded SQLite to 3.7.12.1

   !	Fix typos in cipher.c base36[] and version.h.in.in.

   !	Updated isReservedIP functions for changes given by RFC 4291, 5735. 

   !	Modified MCC to be broadcast-only protocol for improved performance.
	Not finished yet; mcc_listener() to do. See USE_MCC2 blocks.

   +	Added convertSyslog(), convertCtime(), convertToGmt().

   +	Added token_bucket API.

   !	Replaced TextSplit() and TokenNext() returnEmptyToken parameter
	with OR'ed set of flags: TOKEN_KEEP_EMPTY, TOKEN_KEEP_ESCAPES.

   !	Modifed LogOpen() and LogClose() to support standard output.

   !	Fixed potential memory leak in _pthread_cleanup_push() for Windows.
  
   !	Fixed leading zero bug in BufAddUnsigned().

   !	Renamed HTTP API's internal HTTP_CONTINUE with HTTP_GO, since
	HTTP/1.1 has a 100 CONTINUE status code. Added two missing 
	status codes 100 and 101.

   !	Modified cipher to support block encrypting of a text file. Also
	remove -B option; added -A option.

--1.75.16--

   !	Update the gTLD, ccTLD, and 2-level TLD lists. Added the 3-level
   	TLD list supplied by SURBL and updated tlds CLI to test 3 levels.

--1.75.15--

   !	Fixes for FreeBSD detecting POSIX Semaphore API and Berkeley DB